// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextSearch should match snapshot when no selected node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  freeTextSelection={
    Object {
      "http://webprotege.stanford.edu/R93SkoUnFXM1KEjUDb2Ij3n": "node",
      "http://webprotege.stanford.edu/RBfzJ6HkijEIMSY3oKjcLay": "edge",
      "http://webprotege.stanford.edu/Rr60siMdu9IEvdag4DhF7M": "node",
    }
  }
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`FreeTextSearch should match snapshot when selected node 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  freeTextSelection={
    Object {
      "http://webprotege.stanford.edu/R93SkoUnFXM1KEjUDb2Ij3n": "node",
      "http://webprotege.stanford.edu/RBfzJ6HkijEIMSY3oKjcLay": "edge",
      "http://webprotege.stanford.edu/Rr60siMdu9IEvdag4DhF7M": "node",
    }
  }
  mapToProps={[Function]}
  selectedElement={
    Object {
      "1": "node",
    }
  }
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
